--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "raw-loader": "^0.5.1",
     "source-map-support": "^0.5.0",
     "start-server-webpack-plugin": "^2.2.0",
-    "webpack": "^3.6.0",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
     "webpack-node-externals": "^1.6.0"
   }
 }
